# c-ini

./: .gitmodules  AUTHORS  NEWS.md  README  README.md  meson.build
src/: c-ini-private.h  c-ini-reader.c  c-ini.c  c-ini.h  libcini.sym  meson.build  test-api.c  test-basic.c  test-reader.c
